--- a/static/login.html
+++ b/static/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Try System | ログイン / 新規登録</title>
+    <title>先行生産視える化アプリ - ログイン / 新規登録</title>
 
     <!-- 共通スタイル（フォント等） -->
     <link rel="stylesheet" href="styles.css">
@@ -13,6 +13,7 @@
 
 <body>
     <div class="card">
+        <h1>先行生産視える化アプリ</h1>
         <!-- タブ -->
         <div class="tab-head">
             <div id="tab-login" class="tab-btn active">ログイン</div>
