--- a/static/users.html
+++ b/static/users.html
@@ -33,7 +33,7 @@
                     <th style="border:1px solid #ccc; padding:8px; width: 20%;">メール</th>
                     <th style="border:1px solid #ccc; padding:8px; width: 5%;">部署</th>
                     <th style="border:1px solid #ccc; padding:8px; width: 50%;">電子トレイ</th>
-                    <th style="border:1px solid #ccc; padding:8px; width: 5%;">選択</th>
+                    <th style="border:1px solid #ccc; padding:8px; width: 5%;">保存</th>
                 </tr>
             </thead>
             <tbody></tbody>
