--- a/static/index.html
+++ b/static/index.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <title>先行生産視える化アプリ</title>
+
+    <!-- FullCalendar -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header id="app-header">
-        <span id="greeting">先行生産視える化アプリへようこそ！</span>
-        <!-- margin-left:auto をログアウトに付けて右寄せ -->
-        <button id="btn-logout" type="button" class="action" style="margin-left:auto">ログアウト</button>
-        <!-- ログアウトの右隣に配置 -->
-        <button id="btn-users" type="button" class="action">ユーザー編集</button>
+    <!-- ── ヘッダー ───────────────────────── -->
+    <header class="app-header">
+        <h1>先行生産視える化アプリ</h1>
+        <div class="header-actions">
+            <button id="btn-users">ユーザー編集</button>
+            <button id="btn-logout">ログアウト</button>
+        </div>
     </header>
 
     <!-- ── 本体 ───────────────────────────── -->
@@ -88,11 +92,16 @@
                     <legend>承認者 (最大 6 名)</legend>
                 </fieldset>
 
+                <!-- ★ 追加：情報共有者行（ボタンなし／6名） -->
+                <fieldset id="sharers">
+                    <legend>情報共有者 (最大 6 名)</legend>
+                </fieldset>
+
                 <!-- ボタン -->
                 <div class="row buttons">
                     <button type="submit" class="action">登録</button>
                     <button type="button" id="btn-cancel" class="action">イベントのキャンセル</button>
-                    <button type="button" id="btn-email" class="action">電子トレイに投函</button>
+                    <button type="button" id="btn-notify" class="action">電子トレイに通知</button>
                 </div>
             </form>
 
