--- a/static/login.html
+++ b/static/login.html
@@ -21,8 +21,8 @@
         </div>
 
         <!-- ログインフォーム -->
-        <form id="login-form">
-            <input id="login-email" type="email" autocomplete="email" placeholder="メールアドレス" required>
+        <form id="login-form" novalidate>
+            <input id="login-email" type="email" autocomplete="email" placeholder="メールアドレス / g@ でゲストログイン" required>
             <button type="submit">ログイン</button>
         </form>
 
